--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,7 @@
 
     <TextView
         android:id="@+id/text_view_to_tegister"
+        android:onClick="toRegister"
         android:layout_marginTop="36dp"
         android:layout_below="@+id/btn_login"
         android:layout_width="wrap_content"
