--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,7 @@
             android:layout_alignParentRight="true"
             />
         <EditText
-            android:id="@+id/edit_text_number"
+            android:id="@+id/edit_text_name"
             android:background="@null"
             android:hint="@string/hint_name"
             android:inputType="text"
