add api interfaces for response category list and add expenses api interfaces

--- a/app/src/main/res/layout/activity_new_expence.xml
+++ b/app/src/main/res/layout/activity_new_expence.xml
@@ -1,85 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.activities.NewExpenceActivity">
 
     <RelativeLayout
         android:id="@+id/relat_name"
-        android:background="@drawable/draw_relat_input_back"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_below="@+id/relat_mail"
         android:layout_centerInParent="true"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="72dp"
         android:layout_marginRight="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:background="@drawable/draw_relat_input_back">
 
         <EditText
             android:id="@+id/edit_text_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:background="@null"
             android:fontFamily="sans-serif-light"
             android:hint="@string/hint_expence_name"
             android:inputType="text"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/colorPrimary"
             android:textColor="@color/colorPrimary"
-            />
+            android:textColorHint="@color/colorPrimary" />
 
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/relat_type"
-        android:background="@drawable/draw_relat_input_back"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_below="@+id/relat_mail"
         android:layout_centerInParent="true"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:background="@drawable/draw_relat_input_back">
 
         <Spinner
-
             android:id="@+id/id_spinner_expence_type"
-            android:fontFamily="sans-serif-light"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </Spinner>
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-light" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/relat_amount"
-        android:background="@drawable/draw_relat_input_back"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_below="@+id/relat_mail"
         android:layout_centerInParent="true"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:background="@drawable/draw_relat_input_back">
 
         <EditText
             android:id="@+id/edit_text_amount"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:background="@null"
             android:fontFamily="sans-serif-light"
             android:hint="0.00"
             android:inputType="numberDecimal"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/colorPrimary"
             android:textColor="@color/colorPrimary"
-            />
+            android:textColorHint="@color/colorPrimary" />
 
 
     </RelativeLayout>
@@ -88,19 +83,18 @@
     <Button
 
         android:id="@+id/id_button_add_exp"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="54dp"
         android:background="@drawable/draw_button_back"
         android:fontFamily="sans-serif-light"
         android:onClick="addExpence"
         android:text="@string/add_expence"
         android:textAllCaps="false"
-        android:textSize="18sp"
         android:textColor="@android:color/white"
-        android:layout_marginRight="54dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="48dp" />
-
+        android:textSize="18sp" />
 
 
 </LinearLayout>
