--- a/app/src/main/res/layout/fragment_expences.xml
+++ b/app/src/main/res/layout/fragment_expences.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/id_recycler_view_expences"
         android:layout_width="match_parent"
@@ -12,11 +13,9 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/id_fab"
-        app:fabSize="normal"
-        android:layout_margin="16dp"
-        android:layout_gravity="bottom|end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        />
+        android:layout_gravity="bottom|end"
+        android:layout_margin="60dp"
+        app:fabSize="normal" />
 </FrameLayout>
