add icon to list

--- a/app/src/main/res/layout/list_item_offer.xml
+++ b/app/src/main/res/layout/list_item_offer.xml
@@ -1,43 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
-        android:layout_margin="4dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="64dp">
-            <ImageView
 
+            <ImageView
                 android:id="@+id/image_view_bank_icon"
-                android:background="@color/colorPrimary"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="16dp"
                 android:layout_width="48dp"
-                android:layout_height="48dp" />
+                android:layout_height="48dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:src="@drawable/ic_launcher" />
+
             <TextView
                 android:id="@+id/id_text_view_bank_name"
-                android:textStyle="bold"
-                android:text="@string/bankName"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@+id/image_view_bank_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_toRightOf="@+id/image_view_bank_icon"
+                android:text="@string/bankName"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/id_text_view_credit_type"
-                android:text="@string/creditType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_marginLeft="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_toRightOf="@+id/image_view_bank_icon"
-                android:layout_alignParentBottom="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="@string/creditType" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
