--- a/app/src/main/res/layout/fragment_expences.xml
+++ b/app/src/main/res/layout/fragment_expences.xml
@@ -12,10 +12,12 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"
         android:id="@+id/id_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="60dp"
+        android:layout_margin="16dp"
         app:fabSize="normal" />
 </FrameLayout>
